[package]
name = "exif-sorter"
version = "0.2.0"
edition = "2021"
authors = ["Stürmer, Benjamin <benjamin@stuermer.pro>"]
categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "filesystem", "exif", "image"]
license = "AGPL-3.0-only"
description = "A simple tool to sort images into sub-directories based on their exif data."
repository = "https://github.com/thebino/exif-sorter"
readme = "README.md"
exclude = ["tests/data/*", "*.png", "*.psd", ".github/*"]

[dependencies]
# general
anyhow = "1.0"
thiserror = "1.0.60"

# logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tracing-appender = "0.2"

ignore = "0.4.23"

# infer mimetype
rayon = "1"

filetime = "0.2.26"

infer = "0.19"
tiff = "0.10.2"

# read exif data
kamadak-exif = "0.5.5"

# date handling
chrono = "0.4.38"

# random number for unique filenames
rand = "0.8.5"

tokio = { version = "1.37.0", features = ["rt-multi-thread", "full"] }

# cli
clap = { version = "4.5.4", features = ["derive", "wrap_help", "help"] }
colored = "2.1.0"

# tui
ratatui = "0.26.3"
crossterm = "0.27.0"

# gui
eframe = "0.32.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
indicatif = "0.18.6"
clap_complete = "4.6.7"
clap_mangen = "0.3.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
temp-dir = "0.1"
testdir = "0.9.1"
imagemeta = "0.1.0"
img-parts = "0.3.0"

