[package]
name = "exif-sorter"
version = "1.0.0"
edition = "2021"
authors = ["Stürmer, Benjamin <benjamin@stuermer.pro>"]
categories = ["command-line-utilities", "filesystem"]
keywords = ["cli", "filesystem", "exif", "image"]
license = "AGPL-3.0-only"
description = "A simple tool to sort images into sub-directories based on their exif data."
repository = "https://github.com/thebino/exif-sorter"
readme = "README.md"
# reduce crates.io package size but keep assets/icons*.png
exclude = ["tests/data/*", "/*.png", "/*.psd", ".github/*"]

[dependencies]
# general
anyhow = "1.0"
thiserror = "1.0.60"

# logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tracing-appender = "0.2"

ignore = "0.4.23"

# infer mimetype
rayon = "1"

filetime = "0.2.26"

infer = "0.19"
tiff = "0.10.2"

# read exif data
kamadak-exif = "0.5.5"

# date handling
chrono = "0.4.38"

# random number for unique filenames
rand = "0.8.5"

tokio = { version = "1.37.0", features = ["rt-multi-thread", "full"] }

# cli
clap = { version = "4.5.4", features = ["derive", "wrap_help", "help"] }
colored = "2.1.0"

# tui
ratatui = "0.26.3"
crossterm = "0.27.0"

# gui
eframe = "0.32.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
indicatif = "0.18.6"
clap_complete = "4.6.7"
clap_mangen = "0.3.0"
rfd = "0.15"
egui_extras = "0.32"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
temp-dir = "0.1"
testdir = "0.9.1"
imagemeta = "0.1.0"
img-parts = "0.3.0"

# Native installer generation (cargo-packager): one config drives .deb, .rpm,
# .dmg and .msi. Signing is read from the environment at build time, so it is
# unsigned when no cert is present and signs automatically once the CI secrets
# are added — no config change needed.
[package.metadata.packager]
product-name = "exif-sorter"
# Reverse-DNS bundle id — stable across releases, do not change.
identifier = "pro.stuermer.exif-sorter"
category = "Utility"
icons = [
    "assets/icon.icns",
    "assets/icon.ico",
    "assets/icon-256.png",
    "assets/icon-1024.png",
]
homepage = "https://github.com/thebino/exif-sorter"
authors = ["Benjamin Stürmer <benjamin@stuermer.pro>"]
license-file = "LICENSE.md"

# The GUI (eframe/winit) dlopens these at runtime; list them explicitly so the
# native packages declare correct runtime dependencies.
# (cargo-packager has no .rpm backend — rpm is generated by cargo-generate-rpm,
# configured under [package.metadata.generate-rpm] below.)
[package.metadata.packager.deb]
depends = ["libc6", "libx11-6", "libxkbcommon0", "libwayland-client0", "libgl1"]

[package.metadata.packager.macos]
minimum-system-version = "10.13"

# RPM is produced by cargo-generate-rpm (cargo-packager has no rpm backend).
# auto-req = "auto" (its default) reads the ELF binary's shared-library needs,
# so the GUI's runtime deps are detected automatically. Asset sources under
# target/generated/ are produced in CI (man page + shell completions) before
# `cargo generate-rpm` runs.
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/exif-sorter", dest = "/usr/bin/exif-sorter", mode = "755" },
    { source = "packaging/linux/exif-sorter.desktop", dest = "/usr/share/applications/exif-sorter.desktop", mode = "644" },
    { source = "assets/icon-256.png", dest = "/usr/share/icons/hicolor/256x256/apps/exif-sorter.png", mode = "644" },
    { source = "target/generated/exif-sorter.1", dest = "/usr/share/man/man1/exif-sorter.1", mode = "644", doc = true },
    { source = "target/generated/completions/exif-sorter.bash", dest = "/usr/share/bash-completion/completions/exif-sorter", mode = "644" },
    { source = "target/generated/completions/exif-sorter.fish", dest = "/usr/share/fish/vendor_completions.d/exif-sorter.fish", mode = "644" },
    { source = "target/generated/completions/_exif-sorter", dest = "/usr/share/zsh/site-functions/_exif-sorter", mode = "644" },
]

